# driftapi

./: .env  .gitignore  Anleitung.md  LICENSE  README.md  README_EN.md  Sample.env  docker-compose - Kopie.yml  docker-compose.yml  main.py  openapi.json
driftapi/: Dockerfile
driftapi/driftapi/: database.py  main.py  model.py  model_racedisplay.py  settings.py
planning/: FeedbackDriftapi_20220.5.06.txt  FeedbackDriftapi_22.4.2022.txt  UseCaseRaceServer.txt  readmeSendByMartin2022.04.xx.md  readmeSendByMartin2022.05.06.md
racedisplay/: Dockerfile  pyproject.toml
racedisplay/racedisplay/: database.py  main.py  model.py  model_racedisplay.py  settings.py
streamlit/: Dockerfile  Dockerfile.txt  Neues Textdokument.txt  Readme.md  app.py  multipage.py  requirements.txt
streamlit/.streamlit/: config.toml
streamlit/pages/: creategame.py  delete_race.py  download_race.py  mainpage.py  model.py  racedisplay - Kopie.py  racedisplay.py  remove_player_from_race.py  select_race.py  session.py  settings.py  singletons.py
