[tool.poetry]
name = "driftapi"
version = "0.1.0"
description = "driftapi server to retreive and store race information from the sturmkind dr!ft app"
authors = ["Christian Geißler <drift@christiangeissler.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
pymongo = "^3.11.0"
requests = "^2.25.0"
aiohttp = "3.7.4"

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.8"
pytest = "^6.1.2"
pytest-env = "^0.6.2"
pytest-dotenv = "^0.5.2"
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.8.3"
pycodestyle = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pylint."MASTER"]
ignored-modules = ["pydantic"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "R,C,W0613,W0703,E0213,W0511"
